--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,18 +14,22 @@ python = "^3.10"
 python-dotenv = "^1.1.0"
 django = "^5.2"
 djangorestframework = "^3.16.0"
-mongoengine = "^0.29.1"
-pymongo = {extras = ["srv"], version = "^4.12.0"}
+suitable-class-finder = "^0.1.0"
+dnspython = "^2.7.0"
+psycopg2-binary = "^2.9.10"
+sqlalchemy = "^2.0.40"
+marshmallow-sqlalchemy = "^1.4.2"
+alembic = "^1.15.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.1.1"
 pre-commit = "^4.2.0"
-flake8 = "^7.2.0"
 mypy = "^1.15.0"
 isort = "^6.0.1"
 black = {version = "^25.1.0", allow-prereleases = true}
 pytest = "^8.3.5"
 pytest-django = "^4.11.1"
+ruff = "^0.11.6"
 
 [build-system]
 requires = ["poetry-core"]
@@ -61,3 +65,32 @@ exclude = '''
                      # the root of the project
 )
 '''
+
+[tool.mypy]
+follow_imports = "silent"
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+exclude = [
+    "backend/manage.py",
+    "backend/alembic/versions/*",
+]
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
+
+[tool.ruff]
+line-length = 88
+extend-ignore = ["E203"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+
+[tool.ruff.lint.per-file-ignores]
+"backend/alembic/versions/*.py" = ["ALL"]
