--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,37 +1,18 @@
-asgiref==3.8.1
-black==25.1.0
-cfgv==3.4.0
-click==8.1.8
-coverage==7.8.0
-distlib==0.3.9
-Django==5.2
-djangorestframework==3.16.0
-dnspython==2.7.0
-exceptiongroup==1.2.2
-filelock==3.18.0
-flake8==7.2.0
-identify==2.6.9
-iniconfig==2.1.0
-isort==6.0.1
-mccabe==0.7.0
-mongoengine==0.29.1
-mypy==1.15.0
-mypy-extensions==1.0.0
-nodeenv==1.9.1
-packaging==24.2
-pathspec==0.12.1
-platformdirs==4.3.7
-pluggy==1.5.0
-pre_commit==4.2.0
-pycodestyle==2.13.0
-pyflakes==3.3.2
-pymongo==4.12.0
-pytest==8.3.5
-pytest-cov==6.1.1
-pytest-django==4.11.1
-python-dotenv==1.1.0
-PyYAML==6.0.2
-sqlparse==0.5.3
-tomli==2.2.1
-typing_extensions==4.13.2
-virtualenv==20.30.0
+alembic==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
+asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
+backports-datetime-fromisoformat==2.0.3 ; python_version >= "3.10" and python_version < "3.11"
+django==5.2 ; python_version >= "3.10" and python_version < "4.0"
+djangorestframework==3.16.0 ; python_version >= "3.10" and python_version < "4.0"
+dnspython==2.7.0 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==3.2.0 ; python_version < "3.14" and platform_machine == "aarch64" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "ppc64le" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "x86_64" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "amd64" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "AMD64" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "win32" and python_version >= "3.10" or python_version < "3.14" and platform_machine == "WIN32" and python_version >= "3.10"
+mako==1.3.10 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow-sqlalchemy==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
+marshmallow==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
+psycopg2-binary==2.9.10 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.40 ; python_version >= "3.10" and python_version < "4.0"
+sqlparse==0.5.3 ; python_version >= "3.10" and python_version < "4.0"
+suitable-class-finder==0.1.0 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2025.2 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
