--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,30 @@
 {
     "builds": [
         {
+            "src": "app/package.json",
+            "use": "@vercel/svelte"
+        },
+        {
+            "src": "admin/package.json",
+            "use": "@vercel/svelte"
+        },
+        {
             "src": "backend/runiverse/wsgi.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "^/admin(/.*)?$",
+            "dest": "admin"
+        },
+        {
+            "src": "^/api(/.*)?$",
             "dest": "backend/runiverse/wsgi.py"
+        },
+        {
+            "src": "^/(.*)?$",
+            "dest": "app"
         }
     ]
 }
