--- a/admin/package.json
+++ b/admin/package.json
@@ -4,13 +4,13 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "svelte-kit dev",
-        "build": "svelte-kit build",
-        "preview": "svelte-kit preview",
-        "vercel-build": "svelte-kit build",
-        "prepare": "svelte-kit sync || echo ''",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"dev": "pnpm exec svelte-kit dev",
+        "build": "pnpm exec svelte-kit build",
+        "preview": "pnpm exec svelte-kit preview",
+        "vercel-build": "pnpm exec svelte-kit build",
+        "prepare": "pnpm exec svelte-kit sync || echo ''",
+        "check": "pnpm exec svelte-kit sync && pnpm exec svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "pnpm exec svelte-kit sync && pnpm exec svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
