--- a/admin/package.json
+++ b/admin/package.json
@@ -4,23 +4,21 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "pnpm exec svelte-kit dev",
-        "build": "pnpm exec svelte-kit build",
-        "preview": "pnpm exec svelte-kit preview",
-        "vercel-build": "pnpm exec svelte-kit build",
-        "prepare": "pnpm exec svelte-kit sync || echo ''",
-        "check": "pnpm exec svelte-kit sync && pnpm exec svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "pnpm exec svelte-kit sync && pnpm exec svelte-check --tsconfig ./tsconfig.json --watch"
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/adapter-vercel": "^5.7.0",
-		"@sveltejs/kit": "^2.20.7",
+		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"svelte": "^5.28.2",
+		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^6.3.3"
+		"vite": "^6.2.5"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
