--- a/admin/package.json
+++ b/admin/package.json
@@ -15,8 +15,12 @@
 		"@sveltejs/adapter-vercel": "^5.7.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"autoprefixer": "^10.4.21",
+		"daisyui": "^5.0.28",
+		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "3",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.5"
 	},
